su interventi/admin introdotto autocomplete_field su fk_beneficiario su dispositivi/admin introdotto autocomplete_field su utente su prestiti/admin introdotto autocomplete_field su fk_utente su anagrafica/admin aggiunta virgola come separatore lista correlati inserito nella cartella media il watchdog per il resize automatico dei soli jpg caricati aggiunto sbarramento antiFragolino (double_click_prevent) su  interventi/admin, anagrafica/admin, dispositivi/admin, prestiti/admin e wiki/admin

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,28 @@
 
-gse.sqlite3
-media/
-log/
+/anagrafica/__pycache__.000/
+/anagrafica/migrations.000/
+/dispositivi/__pycache__.000/
+/dispositivi/migrations.000/
+/dispositivi/static.000/
+/foto/
+/gse/__pycache__.000/
+/gse/templates.000/
+/interventi/__pycache__.000/
+/interventi/migrations/
+/interventi/migrations.000/
+/media/Eurospin_Assicurazione.pdf
+/media/IMG_20180618_144500_g2plQIp.jpg
+/media/IMG_20180618_144456.jpg
+/media/nohup.out
+/media/IMG_20180507_093415.jpg
+/media/IMG_20180618_144500.jpg
+/media/IMG_20180618_144500_PYXSwWj.jpg
+/prestiti/migrations.000/
+/prestiti/apps.py.000
+/static/
+/wiki/migrations/
+/req.txt
+/gse.sqlite3
+/changelog
+/gse.sqlite3.xxx
+/gse.sqlite3.vuoto
