--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,10 @@
 /media/IMG_20180618_144500_PYXSwWj.jpg
 /prestiti/migrations.000/
 /prestiti/apps.py.000
-/static/
 /wiki/migrations/
 /req.txt
 /gse.sqlite3
 /changelog
 /gse.sqlite3.xxx
-/gse.sqlite3.vuoto
+/static.000/
+/gse/
